--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,45 +10,28 @@ jobs:
     runs-on: ubuntu-latest
 
     env:
-      JDK_VERSION: 14
-      JDK_FILE: openjdk-14.0.1_linux-x64_bin.tar.gz
-      JDK_URL: https://download.java.net/java/GA/jdk14.0.1/664493ef4a6946b186ff29eb326336a2/7/GPL/openjdk-14.0.1_linux-x64_bin.tar.gz
+      JDK_VERSION: 17
 
     steps:
       - uses: actions/checkout@v2
 
-      - name: Prepare JDK folder
-        run: mkdir -p ~/jdk
-
       # (1) -> Prepare cache and Java
       - name: Cache ~/.m2
-        uses: actions/cache@v1
+        uses: actions/cache@v2
         with:
           path: ~/.m2
-          key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
-
-      - name: Cache JDK folder
-        uses: actions/cache@v1
-        with:
-          path: ~/jdk
-          key: ${{ env.JDK_FILE }}
+          key: ${{ runner.os }}-${{ env.JDK_FILE }}-maven-${{ hashFiles('**/pom.xml') }}
 
       # (2) -> Prepare Java
-      - name: Download Oracle JDK
-        run: |
-          if [ ! -f ~/jdk/$JDK_FILE ]; then
-            wget --quiet $JDK_URL -O ~/jdk/$JDK_FILE
-          fi
-          cp ~/jdk/$JDK_FILE .
       - name: Setup Java
-        uses: actions/setup-java@master
+        uses: actions/setup-java@v1
         with:
           version: ${{ env.JDK_VERSION }}
-          jdkFile: ${{ env.JDK_FILE }}
 
       - name: Verify Maven and Java
         run: |
           mvn --version
+
       # (3) -> Test and build
       - name: Run tests
         run: |
