pom replace nexus repository by github packages

--- a/pom.xml
+++ b/pom.xml
@@ -27,8 +27,11 @@
 
     <distributionManagement>
         <repository>
-            <id>nexus-releases</id>
-            <url>https://nexus.internal.fairdatapoint.org/repository/maven-releases/</url>
+            <!-- https://docs.github.com/en/packages/working-with-a-github-packages-registry/working-with-the-apache-maven-registry#publishing-a-package -->
+            <id>github</id>
+            <name>GitHub Apache Maven Packages</name>
+            <!-- https://docs.github.com/en/actions/writing-workflows/choosing-what-your-workflow-does/store-information-in-variables#default-environment-variables -->
+            <url>https://maven.pkg.github.com/${env.GITHUB_REPOSITORY}</url>
         </repository>
     </distributionManagement>
 
@@ -96,25 +99,6 @@
                 <configuration>
                     <source>14</source>
                     <target>14</target>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.sonatype.plugins</groupId>
-                <artifactId>nexus-staging-maven-plugin</artifactId>
-                <version>1.5.1</version>
-                <executions>
-                    <execution>
-                        <id>default-deploy</id>
-                        <phase>deploy</phase>
-                        <goals>
-                            <goal>deploy</goal>
-                        </goals>
-                    </execution>
-                </executions>
-                <configuration>
-                    <serverId>nexus</serverId>
-                    <nexusUrl>https://nexus.internal.fairdatapoint.org</nexusUrl>
-                    <skipStaging>true</skipStaging>
                 </configuration>
             </plugin>
         </plugins>
