publish job depends on test job

--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -8,6 +8,9 @@ on:
     types: [created]
 
 jobs:
+  test:
+    uses: FAIRDataTeam/github-workflows/.github/workflows/maven-verify.yml@v1
   publish:
+    needs: test
     uses: FAIRDataTeam/github-workflows/.github/workflows/maven-publish.yml@v1
     secrets: inherit
